--- a/trafie/Base.lproj/Main.storyboard
+++ b/trafie/Base.lproj/Main.storyboard
@@ -99,6 +99,11 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Asp-qp-xgu">
+                                        <rect key="frame" x="169" y="289" width="37" height="37"/>
+                                        <animations/>
+                                        <color key="color" red="0.60814687241532883" green="0.72578632441586743" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </activityIndicatorView>
                                 </subviews>
                                 <animations/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="calibratedRGB"/>
@@ -107,6 +112,8 @@
                                     <constraint firstItem="yLJ-VG-gcW" firstAttribute="top" secondItem="whE-BS-ZcV" secondAttribute="bottom" constant="8" id="6RP-pv-7rm"/>
                                     <constraint firstItem="Z8v-Mo-nRx" firstAttribute="leading" secondItem="CPV-qA-cPa" secondAttribute="leading" constant="9" id="99g-VR-Pot"/>
                                     <constraint firstItem="xcu-jT-Wa4" firstAttribute="centerX" secondItem="CPV-qA-cPa" secondAttribute="centerX" id="9yi-Xa-9cZ"/>
+                                    <constraint firstItem="Asp-qp-xgu" firstAttribute="top" secondItem="Z8v-Mo-nRx" secondAttribute="bottom" constant="8" id="Bfg-so-oYX"/>
+                                    <constraint firstItem="Asp-qp-xgu" firstAttribute="centerX" secondItem="CPV-qA-cPa" secondAttribute="centerX" id="CXN-cf-TGR"/>
                                     <constraint firstItem="qeB-WQ-QHp" firstAttribute="leading" secondItem="CPV-qA-cPa" secondAttribute="leading" constant="8" id="JP2-Ev-yAU"/>
                                     <constraint firstAttribute="trailing" secondItem="qeB-WQ-QHp" secondAttribute="trailing" constant="8" id="L6p-2A-xIY"/>
                                     <constraint firstAttribute="bottom" secondItem="qeB-WQ-QHp" secondAttribute="bottom" id="MUj-du-aMc"/>
@@ -123,11 +130,6 @@
                                     <constraint firstItem="qun-ma-v5W" firstAttribute="top" secondItem="aSB-Ir-wz7" secondAttribute="bottom" constant="8" id="sVV-lm-4EN"/>
                                 </constraints>
                             </view>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Asp-qp-xgu">
-                                <rect key="frame" x="169" y="530" width="37" height="37"/>
-                                <animations/>
-                                <color key="color" red="0.60814687241532883" green="0.72578632441586743" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </activityIndicatorView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -136,7 +138,6 @@
                             <constraint firstItem="fgO-Zb-eXI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="5K7-RQ-Xdr"/>
                             <constraint firstItem="CPV-qA-cPa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="Cd9-7K-yGQ"/>
                             <constraint firstItem="CPV-qA-cPa" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="Cme-vk-iYl"/>
-                            <constraint firstItem="Asp-qp-xgu" firstAttribute="centerX" secondItem="CPV-qA-cPa" secondAttribute="centerX" id="DHY-aA-D2v"/>
                             <constraint firstItem="CPV-qA-cPa" firstAttribute="leading" secondItem="fgO-Zb-eXI" secondAttribute="leading" id="FkI-sw-OqC"/>
                             <constraint firstItem="CPV-qA-cPa" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="VrZ-gP-WGv"/>
                             <constraint firstAttribute="centerY" secondItem="CPV-qA-cPa" secondAttribute="centerY" id="XV2-Jc-Gau"/>
@@ -144,7 +145,6 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="fgO-Zb-eXI" secondAttribute="bottom" id="h7g-bJ-5L5"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fgO-Zb-eXI" secondAttribute="trailing" constant="-16" id="rhz-cg-MR6"/>
                             <constraint firstItem="fgO-Zb-eXI" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="v7L-RQ-sj9"/>
-                            <constraint firstItem="xcu-jT-Wa4" firstAttribute="top" secondItem="Asp-qp-xgu" secondAttribute="bottom" constant="33" id="wZ2-tj-psO"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
@@ -850,7 +850,7 @@
         <scene sceneID="iqA-w3-oay">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YKo-Ea-TlP" userLabel="ProfileNavigationController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="more" id="Xbs-S6-ohT" userLabel="Profile"/>
+                    <tabBarItem key="tabBarItem" title="You" image="ic_face" id="Xbs-S6-ohT" userLabel="Profile"/>
                     <toolbarItems/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ysu-bp-ejp">
@@ -875,7 +875,7 @@
         <scene sceneID="KiK-kw-NLx">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" hidesBarsWhenKeyboardAppears="YES" id="HIG-KF-SDB" userLabel="ActivitiesNavigationController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" selectedImage="ic_list" systemItem="history" id="MdS-Es-h7n" userLabel="Actitivies"/>
+                    <tabBarItem key="tabBarItem" title="Activities" image="ic_format_list_bulleted" id="MdS-Es-h7n" userLabel="Actitivies"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="hrX-Uh-iKy">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -1198,6 +1198,7 @@
     </scenes>
     <resources>
         <image name="applause.jpg" width="480" height="720"/>
-        <image name="ic_list" width="24" height="24"/>
+        <image name="ic_face" width="24" height="24"/>
+        <image name="ic_format_list_bulleted" width="24" height="24"/>
     </resources>
 </document>
